# QUANT-PROJECTS

./: .gitignore  LICENSE  README.md
03_quant_trading/02_avellaneda_stoikov_market_making/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
03_quant_trading/02_avellaneda_stoikov_market_making/config/: parameters.yaml
03_quant_trading/02_avellaneda_stoikov_market_making/experiments/: __init__.py  baseline_experiment.py  competition_experiment.py  microprice_experiment.py  pnl_decomposition_experiment.py  queue_experiment.py  regime_sweep_experiment.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/: __init__.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/agents/: __init__.py  competitive_mm.py  market_maker.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/analysis/: __init__.py  microstructure_diagnostics.py  pnl_attribution.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/market/: __init__.py  limit_order_book.py  market_environment.py  order_flow.py  price_process.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/models/: __init__.py  avellaneda_stoikov.py  hjb_solver.py  intensity_models.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/simulation/: __init__.py  multi_agent_simulator.py  single_agent_simulator.py
03_quant_trading/02_avellaneda_stoikov_market_making/src/utils/: __init__.py  helpers.py  logging.py
04_quant_developer/01_cpp_derivatives_pricing_engine/: .gitignore  CMakeLists.txt  README.md
04_quant_developer/01_cpp_derivatives_pricing_engine/benchmarks/: CMakeLists.txt  benchmark_pricing.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/examples/: CMakeLists.txt  basic_pricing.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/calibration/: calibrator.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/models/: heston_model.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/monte_carlo/: discretization.hpp  mc_engine.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/numerics/: random.hpp  sparse_matrix.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/pde/: grid.hpp  pde_solver.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/include/utils/: memory.hpp
04_quant_developer/01_cpp_derivatives_pricing_engine/src/calibration/: calibrator.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/src/monte_carlo/: mc_engine.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/src/numerics/: random.cpp  sparse_matrix.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/src/pde/: grid.cpp  pde_solver.cpp
04_quant_developer/01_cpp_derivatives_pricing_engine/tests/: CMakeLists.txt  test_bs_limit.cpp  test_calibration.cpp  test_mc_pde_consistency.cpp  test_pde_bs_limit.cpp  test_sobol_convergence.cpp
04_quant_developer/02_cpp_limit_order_book_engine/: .gitignore  CMakeLists.txt  README.md
04_quant_developer/02_cpp_limit_order_book_engine/benchmarks/: sample_results.csv
04_quant_developer/02_cpp_limit_order_book_engine/docs/: design_notes.md
04_quant_developer/02_cpp_limit_order_book_engine/include/: cpu_affinity.h  matching_engine.h  memory_pool.h  order.h  order_book.h  price_level.h  timestamp.h
04_quant_developer/02_cpp_limit_order_book_engine/scripts/: run_benchmarks.sh
04_quant_developer/02_cpp_limit_order_book_engine/src/: benchmark.cpp  main.cpp  matching_engine.cpp  memory_pool.cpp  order_book.cpp
04_quant_developer/03_cpp_market_data_gateway/: .gitignore  CMakeLists.txt  README.md  build.sh
04_quant_developer/03_cpp_market_data_gateway/docs/: architecture.md  binary_parser.md  fix_parser.md  memory_model.md  threading_model.md
04_quant_developer/03_cpp_market_data_gateway/include/buffer/: event_queue.hpp  ring_buffer.hpp
04_quant_developer/03_cpp_market_data_gateway/include/common/: events.hpp  types.hpp
04_quant_developer/03_cpp_market_data_gateway/include/dispatcher/: event_dispatcher.hpp
04_quant_developer/03_cpp_market_data_gateway/include/engine/: decoder_thread.hpp  io_thread.hpp
04_quant_developer/03_cpp_market_data_gateway/include/network/: tcp_listener.hpp  udp_listener.hpp
04_quant_developer/03_cpp_market_data_gateway/include/parsers/: binary_parser.hpp  fix_parser.hpp
04_quant_developer/03_cpp_market_data_gateway/scripts/: setup_system.sh  test_feed.py
04_quant_developer/03_cpp_market_data_gateway/src/: main.cpp
04_quant_developer/03_cpp_market_data_gateway/src/buffer/: ring_buffer.cpp
04_quant_developer/04_cpp_smart_order_router/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  main.cpp
04_quant_developer/04_cpp_smart_order_router/config/: execution.yaml  venues.yaml
04_quant_developer/04_cpp_smart_order_router/include/: analytics.hpp  cost_model.hpp  execution_engine.hpp  execution_strategy.hpp  order_book.hpp  queue_model.hpp  smart_order_router.hpp  types.hpp  venue.hpp
04_quant_developer/04_cpp_smart_order_router/tests/: test_order_book.cpp
04_quant_developer/05_cpp_portfolio_risk_engine/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  verify.bat  verify.sh
04_quant_developer/05_cpp_portfolio_risk_engine/benchmarks/: benchmark.cpp
04_quant_developer/05_cpp_portfolio_risk_engine/docs/: FAQ.md  api_reference.md  architecture.md  design_decisions.md  performance.md  theory.md  usage_examples.md
04_quant_developer/05_cpp_portfolio_risk_engine/src/: main.cpp
04_quant_developer/05_cpp_portfolio_risk_engine/tests/: test_portfolio.cpp  test_pricing.cpp  test_rng.cpp  test_thread_pool.cpp  test_variance_reduction.cpp
04_quant_developer/06_event_driven_market_simulator/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
04_quant_developer/06_event_driven_market_simulator/docs/: architecture.md  latency_model.md  limitations.md  matching_engine.md
04_quant_developer/06_event_driven_market_simulator/src/: main.cpp
04_quant_developer/06_event_driven_market_simulator/tests/: test_matching_engine.cpp  test_order_book.cpp
(+401 files in other folders)
